--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -39,3 +39,33 @@
     background: #da552f;
     color: #fff;
 }
+
+.product-list .actions {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.product-list button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+    background: #da552f;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.product-list button[disabled] {
+    opacity: 0.5;
+    cursor: default;
+}
+
+.product-list button:hover {
+    opacity: 0.7;
+}
+
+.product-list button[disabled]:hover {
+    opacity: 0.5;
+}
